fixed mobile homescreen spacing

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ header {
   width: 100%;
   box-sizing: border-box;
   z-index: 99;
-  padding: 3vw;
+  padding: 3vw 3vw 3vw 2em;
 }
 
 .app_title {
@@ -128,7 +128,7 @@ header {
 main {
   height: 100%;
   min-height: 100vh;
-  padding: 25vw 0 3em 0;
+  padding: 20vw 0 3em 0;
 }
 
 .cardSectionHeading {
@@ -190,13 +190,13 @@ main {
   display: inline-flex;
   width: auto;
   margin: 0 2em 0 0;
-  padding: 1em 0 2em 0;
+  padding: 3vw 0 4vw 0;
 }
 
 .card {
   display: grid;
-  height: 40vw;
-  width: 30vw;
+  height: 43vw;
+  width: 33vw;
   border: 3px solid black;
   box-shadow: -4px 5px 4px rgb(0 0 0 / 0.25);
   border-radius: 12%;
@@ -231,7 +231,7 @@ main {
   line-height: 1em;
   grid-column: 1;
   grid-row: 3;
-  font-size: 3.25vw;
+  font-size: 3.5vw;
 }
 
 .recipe-subheader {
@@ -239,7 +239,7 @@ main {
   font-size: .65em;
   font-weight: 600;
   line-height: 1em;
-  font-size: 1.75vw;
+  font-size: 2vw;
 }
 
 .star-icon {
